更新Docker Compose配置，将容器名称从python-fastapi-backend更改为curio-backend。

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   backend:
     build: .
-    container_name: python-fastapi-backend
+    container_name: curio-backend
     ports:
       - "8080:8080"
     volumes:
