--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "vite": "^4.5.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "vite": "^4.5.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   }
-} 
+}
