--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
