--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "http://3.216.98.136:8080/:path*"
+      "destination": "http://3.216.98.136:8080/api/:path*"
     },
     {
       "source": "/(.*)",
