--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.6.2",
+    "build": "^0.1.4",
     "react": "^18.2.0",
-    "@hello-pangea/dnd": "^18.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
